# partybox-companion

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  PROJECT_CONTEXT.md  README.md  pyproject.toml
.claude/: settings.json
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.githooks/: pre-push
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
demo/: README.md  pyproject.toml
demo/src/: companion_demo.py
docs/: architecture.md  developer-guide.md  developer-handbook.md  installation.md  model-support.md  roadmap.md  vision.md
docs/adr/: 001-project-vision.md  002-monorepo.md  003-sdk-first.md  004-daemon.md  005-appliance.md  006-capability-model.md  007-tcp-only.md  008-mqtt-deferred.md  009-single-device.md  010-sdk-scope.md  011-companion-portal.md  012-interoperability-positioning.md  013-user-journey-milestone-ordering.md  014-audio-transport-viability.md  015-bluetooth-control-transport.md  016-companion-owns-spotify-lifecycle.md  017-runtime-layout.md  018-systemd-service.md  019-distribution-approach.md  020-appliance-hardening.md  021-network-provisioning.md  022-volume-authority.md  023-hci-controller-reset-on-startup.md  024-task-supervision.md  025-appliance-naming-model.md  (+19 more)
docs/api/: v1.md
examples/: README.md  battery.py  connect.py  device_info.py  power_off.py  power_on.py  query_status.py  scan.py  start_daemon.py
image/: README.md  install.sh  smoke-test.sh
research/: README.md
system/: README.md
webui/: README.md
(+61 files in other folders)
